added add pet form

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,11 +14,10 @@
 <p>{{pet.name}} <b>is available!</b></p>
 {% endif %}
 
-
-
-
 </div>
 
 {% endfor %}
+
+<a href="/add">Add a pet!</a>
 
 {% endblock %}
