--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 {% if pet.available %}
-<p>{{pet.name}} <b>is available!</b></p>
+<p><a href="/pet/{{pet.id}}">{{pet.name}}</a> <b>is available!</b></p>
 {% endif %}
 
 </div>
