added edit page and bootstrap styling

--- a/templates/edit_details.html
+++ b/templates/edit_details.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Add a pet!{% endblock %}
+{% block title %}Edit a pet!{% endblock %}
 {% block content %}
 
 <form action="" method="POST" class="form-control">
@@ -14,9 +14,7 @@
             {% endfor %}
         </p>
         {% endfor %}
-        <button class="btn btn-primary btn-md">Submit</button>
-        <a href="/" class="btn btn-primary btn-md">Go Back</a>
+        <button class="btn btn-lg btn-primary">Submit</button>
 </form>
-
 
 {% endblock %}
