--- a/templates/pet_details.html
+++ b/templates/pet_details.html
@@ -12,6 +12,6 @@
 <p>{{pet.age}} years old!</p>
 {% endif %}
 
-<a href="/pet/{{pet.id}}/edit">Edit details</a>
+<a href="/pet/{{pet.id}}/edit" class="btn btn-primary btn-md">Edit details</a>
 
 {% endblock %}
